--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "animejs": "^3.2.1",
     "normalize.css": "^8.0.1"
+  },
+  "devDependencies": {
+    "saos": "^1.3.1"
   }
 }
